# ruetta

./: Cargo.toml  README.md
examples/svelte/c/: index.ruetta  types.ruetta
examples/svelte/store/: index.ruetta
src/: commands.rs  consts.rs  file.rs  main.rs  methods.rs  utils.rs
src/methods/: args.rs  clean.rs  consts.rs  create.rs  help.rs  info.rs  init.rs  list.rs  make.rs  mod.rs  version.rs
src/methods/args/: create.rs  info.rs  make.rs  mod.rs  utils.rs
src/models/: commands.rs  config.rs  methods.rs  mod.rs
src/templates/: ejs.rs  files.rs  loader.rs  mod.rs  template.rs
