[package]
name = "ruetta"
version = "0.0.2"
edition = "2024"
description = "Template-based file generator"
license = "MIT"
repository = "https://github.com/vikkio88/ruetta"
readme = "README.md"
keywords = ["cli", "templates", "scaffolding", "hygen"]
categories = ["command-line-utilities"]

[[bin]]
name = "ruetta"
path = "src/main.rs"

[dependencies]
dojang = "0.1.6"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_yml = "0.0.12"
